--- a/index.html
+++ b/index.html
@@ -439,39 +439,39 @@ body {
     <!-- Slide 1: Match -->
     <div class="slide">
       <div class="frame">
-        <imgo src="../match/real_match.gif" autoplay muted loop></video>
+        <img src="../match/real_match.gif" autoplay muted loop></img>
         <div class="caption">Real Test Frames</div>
       </div>
       <div class="frame">
-        <img src="../match/vp_m_match.gif" autoplay muted loop></video>
+        <img src="../match/vp_m_match.gif" autoplay muted loop></img>
         <div class="caption">VideoPoet (multiframe)</div>
       </div>
       <div class="frame">
-        <video src="../match/vp_i2v_match.gif" autoplay muted loop></video>
+        <img src="../match/vp_i2v_match.gif" autoplay muted loop></img>
         <div class="caption">VideoPoet (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../match/sora_match.gif" autoplay muted loop></video>
+        <img src="../match/sora_match.gif" autoplay muted loop></img>
         <div class="caption">Sora (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../match/svd_match.gif" autoplay muted loop></video>
+        <img src="../match/svd_match.gif" autoplay muted loop></img>
         <div class="caption">Stable Video Diffusion (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../match/pika_match.gif" autoplay muted loop></video>
+        <img src="../match/pika_match.gif" autoplay muted loop></img>
         <div class="caption">Pika 1.0 (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../match/runway_match.gif" autoplay muted loop></video>
+        <img src="../match/runway_match.gif" autoplay muted loop></img>
         <div class="caption">Runway Gen 3 (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../match/lum_m_match.gif" autoplay muted loop></video>
+        <img src="../match/lum_m_match.gif" autoplay muted loop></img>
         <div class="caption">Lumiere (multiframe)</div>
       </div>
       <div class="frame">
-        <video src="../match/lum_i2v_match.gif" autoplay muted loop></video>
+        <img src="../match/lum_i2v_match.gif" autoplay muted loop></img>
         <div class="caption">Lumiere (i2v)</div>
       </div>
     </div>
@@ -479,39 +479,39 @@ body {
     <!-- Slide 2: Weight -->
     <div class="slide">
       <div class="frame">
-        <video src="../weight/real_weight.gif" autoplay muted loop></video>
+        <img src="../weight/real_weight.gif" autoplay muted loop></video>
         <div class="caption">Real Test Frames</div>
       </div>
       <div class="frame">
-        <video src="../weight/vp_m_weight.gif" autoplay muted loop></video>
+        <img src="../weight/vp_m_weight.gif" autoplay muted loop></video>
         <div class="caption">VideoPoet (multiframe)</div>
       </div>
       <div class="frame">
-        <video src="../weight/vp_i2v_weight.gif" autoplay muted loop></video>
+        <img src="../weight/vp_i2v_weight.gif" autoplay muted loop></img>
         <div class="caption">VideoPoet (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../weight/sora_weight.gif" autoplay muted loop></video>
+        <img src="../weight/sora_weight.gif" autoplay muted loop></img>
         <div class="caption">Sora (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../weight/svd_weight.gif" autoplay muted loop></video>
+        <img src="../weight/svd_weight.gif" autoplay muted loop></img>
         <div class="caption">Stable Video Diffusion (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../weight/pika_weight.gif" autoplay muted loop></video>
+        <img src="../weight/pika_weight.gif" autoplay muted loop></img>
         <div class="caption">Pika 1.0 (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../weight/runway_weight.gif" autoplay muted loop></video>
+        <img src="../weight/runway_weight.gif" autoplay muted loop></img>
         <div class="caption">Runway Gen 3 (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../weight/lum_m_weight.gif" autoplay muted loop></video>
+        <img src="../weight/lum_m_weight.gif" autoplay muted loop></img>
         <div class="caption">Lumiere (multiframe)</div>
       </div>
       <div class="frame">
-        <video src="../weight/lum_i2v_weight.gif" autoplay muted loop></video>
+        <img src="../weight/lum_i2v_weight.gif" autoplay muted loop></img>
         <div class="caption">Lumiere (i2v)</div>
       </div>
     </div>
@@ -519,39 +519,39 @@ body {
     <!-- Slide 3: Paint -->
     <div class="slide">
       <div class="frame">
-        <video src="../paint/real_paint.gif" autoplay muted loop></video>
+        <img src="../paint/real_paint.gif" autoplay muted loop></img>
         <div class="caption">Real Test Frames</div>
       </div>
       <div class="frame">
-        <video src="../paint/vp_m_paint.gif" autoplay muted loop></video>
+        <img src="../paint/vp_m_paint.gif" autoplay muted loop></img>
         <div class="caption">VideoPoet (multiframe)</div>
       </div>
       <div class="frame">
-        <video src="../paint/vp_i2v_paint.gif" autoplay muted loop></video>
+        <img src="../paint/vp_i2v_paint.gif" autoplay muted loop></img>
         <div class="caption">VideoPoet (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../paint/sora_paint.gif" autoplay muted loop></video>
+        <img src="../paint/sora_paint.gif" autoplay muted loop></img>
         <div class="caption">Sora (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../paint/svd_paint.gif" autoplay muted loop></video>
+        <img src="../paint/svd_paint.gif" autoplay muted loop></img>
         <div class="caption">Stable Video Diffusion (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../paint/pika_paint.gif" autoplay muted loop></video>
+        <img src="../paint/pika_paint.gif" autoplay muted loop></img>
         <div class="caption">Pika 1.0 (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../paint/runway_paint.gif" autoplay muted loop></video>
+        <img src="../paint/runway_paint.gif" autoplay muted loop></img>
         <div class="caption">Runway Gen 3 (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../paint/lum_m_paint.gif" autoplay muted loop></video>
+        <img src="../paint/lum_m_paint.gif" autoplay muted loop></img>
         <div class="caption">Lumiere (multiframe)</div>
       </div>
       <div class="frame">
-        <video src="../paint/lum_i2v_paint.gif" autoplay muted loop></video>
+        <img src="../paint/lum_i2v_paint.gif" autoplay muted loop></img>
         <div class="caption">Lumiere (i2v)</div>
       </div>
     </div>
@@ -559,39 +559,39 @@ body {
     <!-- Slide 4: Teapot -->
     <div class="slide">
       <div class="frame">
-        <video src="../teapot/real_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/real_teapot.gif" autoplay muted loop></img>
         <div class="caption">Real Test Frames</div>
       </div>
       <div class="frame">
-        <video src="../teapot/vp_m_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/vp_m_teapot.gif" autoplay muted loop></img>
         <div class="caption">VideoPoet (multiframe)</div>
       </div>
       <div class="frame">
-        <video src="../teapot/vp_i2v_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/vp_i2v_teapot.gif" autoplay muted loop></img>
         <div class="caption">VideoPoet (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../teapot/sora_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/sora_teapot.gif" autoplay muted loop></img>
         <div class="caption">Sora (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../teapot/svd_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/svd_teapot.gif" autoplay muted loop></img>
         <div class="caption">Stable Video Diffusion (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../teapot/pika_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/pika_teapot.gif" autoplay muted loop></img>
         <div class="caption">Pika 1.0 (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../teapot/runway_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/runway_teapot.gif" autoplay muted loop></img>
         <div class="caption">Runway Gen 3 (i2v)</div>
       </div>
       <div class="frame">
-        <video src="../teapot/lum_m_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/lum_m_teapot.gif" autoplay muted loop></img>
         <div class="caption">Lumiere (multiframe)</div>
       </div>
       <div class="frame">
-        <video src="../teapot/lum_i2v_teapot.gif" autoplay muted loop></video>
+        <img src="../teapot/lum_i2v_teapot.gif" autoplay muted loop></img>
         <div class="caption">Lumiere (i2v)</div>
       </div>
     </div>
