--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ body {
       <div class="caption">Real Test Frames</div>
     </div>
 
-    <!-- First row of 4 generated videos -->
+    <!-- Generated videos -->
     <div class="frame">
       <img src="../match/vp_m_match.gif" autoplay muted loop></img>
       <div class="caption">VideoPoet (multiframe)</div>
@@ -469,8 +469,6 @@ body {
       <img src="../match/svd_match.gif" autoplay muted loop></img>
       <div class="caption">Stable Video Diffusion (i2v)</div>
     </div>
-
-    <!-- Second row of 4 generated videos -->
     <div class="frame">
       <img src="../match/pika_match.gif" autoplay muted loop></img>
       <div class="caption">Pika 1.0 (i2v)</div>
@@ -497,7 +495,7 @@ body {
       <div class="caption">Real Test Frames</div>
     </div>
 
-    <!-- First row of 4 generated videos -->
+    <!-- Generated videos -->
     <div class="frame">
       <img src="../weight/vp_m_weight.gif" autoplay muted loop></img>
       <div class="caption">VideoPoet (multiframe)</div>
@@ -514,8 +512,6 @@ body {
       <img src="../weight/svd_weight.gif" autoplay muted loop></img>
       <div class="caption">Stable Video Diffusion (i2v)</div>
     </div>
-
-    <!-- Second row of 4 generated videos -->
     <div class="frame">
       <img src="../weight/pika_weight.gif" autoplay muted loop></img>
       <div class="caption">Pika 1.0 (i2v)</div>
@@ -534,8 +530,93 @@ body {
     </div>
   </div>
 
-  <!-- Repeat similar structure for 'paint' and 'teapot' -->
+  <!-- Slide for 'paint' folder -->
+  <div class="slide">
+    <!-- Real video -->
+    <div class="frame" style="grid-column: span 4;">
+      <img src="../paint/real_paint.gif" autoplay muted loop></img>
+      <div class="caption">Real Test Frames</div>
+    </div>
+
+    <!-- Generated videos -->
+    <div class="frame">
+      <img src="../paint/vp_m_paint.gif" autoplay muted loop></img>
+      <div class="caption">VideoPoet (multiframe)</div>
+    </div>
+    <div class="frame">
+      <img src="../paint/vp_i2v_paint.gif" autoplay muted loop></img>
+      <div class="caption">VideoPoet (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../paint/sora_paint.gif" autoplay muted loop></img>
+      <div class="caption">Sora (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../paint/svd_paint.gif" autoplay muted loop></img>
+      <div class="caption">Stable Video Diffusion (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../paint/pika_paint.gif" autoplay muted loop></img>
+      <div class="caption">Pika 1.0 (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../paint/runway_paint.gif" autoplay muted loop></img>
+      <div class="caption">Runway Gen 3 (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../paint/lum_m_paint.gif" autoplay muted loop></img>
+      <div class="caption">Lumiere (multiframe)</div>
+    </div>
+    <div class="frame">
+      <img src="../paint/lum_i2v_paint.gif" autoplay muted loop></img>
+      <div class="caption">Lumiere (i2v)</div>
+    </div>
+  </div>
+
+  <!-- Slide for 'teapot' folder -->
+  <div class="slide">
+    <!-- Real video -->
+    <div class="frame" style="grid-column: span 4;">
+      <img src="../teapot/real_teapot.gif" autoplay muted loop></img>
+      <div class="caption">Real Test Frames</div>
+    </div>
+
+    <!-- Generated videos -->
+    <div class="frame">
+      <img src="../teapot/vp_m_teapot.gif" autoplay muted loop></img>
+      <div class="caption">VideoPoet (multiframe)</div>
+    </div>
+    <div class="frame">
+      <img src="../teapot/vp_i2v_teapot.gif" autoplay muted loop></img>
+      <div class="caption">VideoPoet (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../teapot/sora_teapot.gif" autoplay muted loop></img>
+      <div class="caption">Sora (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../teapot/svd_teapot.gif" autoplay muted loop></img>
+      <div class="caption">Stable Video Diffusion (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../teapot/pika_teapot.gif" autoplay muted loop></img>
+      <div class="caption">Pika 1.0 (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../teapot/runway_teapot.gif" autoplay muted loop></img>
+      <div class="caption">Runway Gen 3 (i2v)</div>
+    </div>
+    <div class="frame">
+      <img src="../teapot/lum_m_teapot.gif" autoplay muted loop></img>
+      <div class="caption">Lumiere (multiframe)</div>
+    </div>
+    <div class="frame">
+      <img src="../teapot/lum_i2v_teapot.gif" autoplay muted loop></img>
+      <div class="caption">Lumiere (i2v)</div>
+    </div>
+  </div>
 </div>
+
 
 
 
