--- a/index.html
+++ b/index.html
@@ -442,216 +442,96 @@ body {
       </table>
     </div>
 
-    <!-- Samples -->
-    <div class="section-wrapper">
-      <h2>Examples 🎞️</h2>
-    </div>
-
-    <div class="video-samples">
-  <div class="arrow arrow-left" onclick="prevSlide()">&lsaquo;</div>
-  <div class="slide-container">
-  <!-- Slide for 'match' folder -->
-  <div class="slide">
-    <!-- Real video -->
-    <div class="frame" style="grid-column: span 4;">
-      <img src="../match/real_match.gif" autoplay muted loop></img>
-      <div class="caption">Real Test Frames</div>
-    </div>
-
-    <!-- Generated videos -->
-    <div class="frame">
-      <img src="../match/vp_m_match.gif" autoplay muted loop></img>
-      <div class="caption">VideoPoet (multiframe)</div>
-    </div>
-    <div class="frame">
-      <img src="../match/vp_i2v_match.gif" autoplay muted loop></img>
-      <div class="caption">VideoPoet (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../match/sora_match.gif" autoplay muted loop></img>
-      <div class="caption">Sora (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../match/svd_match.gif" autoplay muted loop></img>
-      <div class="caption">Stable Video Diffusion (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../match/pika_match.gif" autoplay muted loop></img>
-      <div class="caption">Pika 1.0 (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../match/runway_match.gif" autoplay muted loop></img>
-      <div class="caption">Runway Gen 3 (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../match/lum_m_match.gif" autoplay muted loop></img>
-      <div class="caption">Lumiere (multiframe)</div>
-    </div>
-    <div class="frame">
-      <img src="../match/lum_i2v_match.gif" autoplay muted loop></img>
-      <div class="caption">Lumiere (i2v)</div>
-    </div>
+  <!-- Samples Section -->
+  <div class="section-wrapper">
+    <h2>Examples 🎞️</h2>
   </div>
 
-  <!-- Slide for 'weight' folder -->
-  <div class="slide">
-    <!-- Real video -->
-    <div class="frame" style="grid-column: span 4;">
-      <img src="../weight/real_weight.gif" autoplay muted loop></img>
-      <div class="caption">Real Test Frames</div>
-    </div>
+  <!-- Navigation and Video Samples -->
+  <div class="video-samples">
+    <div class="arrow arrow-left" onclick="prevSlide()">&lsaquo;</div>
+    <div class="slide-container">
+      <!-- Slide for 'weight' folder -->
+      <div class="slide">
+        <div class="frame">
+          <img src="../weight/real_weight.gif" alt="Real Test Frames"></img>
+          <div class="caption">Real Test Frames</div>
+        </div>
+        <div class="frame">
+          <img src="../weight/vp_m_weight.gif" alt="VideoPoet (multiframe)"></img>
+          <div class="caption">VideoPoet (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../weight/vp_i2v_weight.gif" alt="VideoPoet (i2v)"></img>
+          <div class="caption">VideoPoet (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../weight/sora_weight.gif" alt="Sora (i2v)"></img>
+          <div class="caption">Sora (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../weight/svd_weight.gif" alt="Stable Video Diffusion (i2v)"></img>
+          <div class="caption">Stable Video Diffusion (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../weight/pika_weight.gif" alt="Pika 1.0 (i2v)"></img>
+          <div class="caption">Pika 1.0 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../weight/runway_weight.gif" alt="Runway Gen 3 (i2v)"></img>
+          <div class="caption">Runway Gen 3 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../weight/lum_m_weight.gif" alt="Lumiere (multiframe)"></img>
+          <div class="caption">Lumiere (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../weight/lum_i2v_weight.gif" alt="Lumiere (i2v)"></img>
+          <div class="caption">Lumiere (i2v)</div>
+        </div>
+      </div>
 
-    <!-- Generated videos -->
-    <div class="frame">
-      <img src="../weight/vp_m_weight.gif" autoplay muted loop></img>
-      <div class="caption">VideoPoet (multiframe)</div>
+      <!-- Slide for 'paint' folder -->
+      <div class="slide">
+        <!-- Repeat similar structure for 'paint' -->
+      </div>
+
+      <!-- Slide for 'teapot' folder -->
+      <div class="slide">
+        <!-- Repeat similar structure for 'teapot' -->
+      </div>
     </div>
-    <div class="frame">
-      <img src="../weight/vp_i2v_weight.gif" autoplay muted loop></img>
-      <div class="caption">VideoPoet (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../weight/sora_weight.gif" autoplay muted loop></img>
-      <div class="caption">Sora (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../weight/svd_weight.gif" autoplay muted loop></img>
-      <div class="caption">Stable Video Diffusion (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../weight/pika_weight.gif" autoplay muted loop></img>
-      <div class="caption">Pika 1.0 (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../weight/runway_weight.gif" autoplay muted loop></img>
-      <div class="caption">Runway Gen 3 (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../weight/lum_m_weight.gif" autoplay muted loop></img>
-      <div class="caption">Lumiere (multiframe)</div>
-    </div>
-    <div class="frame">
-      <img src="../weight/lum_i2v_weight.gif" autoplay muted loop></img>
-      <div class="caption">Lumiere (i2v)</div>
-    </div>
+    <div class="arrow arrow-right" onclick="nextSlide()">&rsaquo;</div>
   </div>
-
-  <!-- Slide for 'paint' folder -->
-  <div class="slide">
-    <!-- Real video -->
-    <div class="frame" style="grid-column: span 4;">
-      <img src="../paint/real_paint.gif" autoplay muted loop></img>
-      <div class="caption">Real Test Frames</div>
-    </div>
-
-    <!-- Generated videos -->
-    <div class="frame">
-      <img src="../paint/vp_m_paint.gif" autoplay muted loop></img>
-      <div class="caption">VideoPoet (multiframe)</div>
-    </div>
-    <div class="frame">
-      <img src="../paint/vp_i2v_paint.gif" autoplay muted loop></img>
-      <div class="caption">VideoPoet (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../paint/sora_paint.gif" autoplay muted loop></img>
-      <div class="caption">Sora (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../paint/svd_paint.gif" autoplay muted loop></img>
-      <div class="caption">Stable Video Diffusion (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../paint/pika_paint.gif" autoplay muted loop></img>
-      <div class="caption">Pika 1.0 (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../paint/runway_paint.gif" autoplay muted loop></img>
-      <div class="caption">Runway Gen 3 (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../paint/lum_m_paint.gif" autoplay muted loop></img>
-      <div class="caption">Lumiere (multiframe)</div>
-    </div>
-    <div class="frame">
-      <img src="../paint/lum_i2v_paint.gif" autoplay muted loop></img>
-      <div class="caption">Lumiere (i2v)</div>
-    </div>
-  </div>
-
-  <!-- Slide for 'teapot' folder -->
-  <div class="slide">
-    <!-- Real video -->
-    <div class="frame" style="grid-column: span 4;">
-      <img src="../teapot/real_teapot.gif" autoplay muted loop></img>
-      <div class="caption">Real Test Frames</div>
-    </div>
-
-    <!-- Generated videos -->
-    <div class="frame">
-      <img src="../teapot/vp_m_teapot.gif" autoplay muted loop></img>
-      <div class="caption">VideoPoet (multiframe)</div>
-    </div>
-    <div class="frame">
-      <img src="../teapot/vp_i2v_teapot.gif" autoplay muted loop></img>
-      <div class="caption">VideoPoet (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../teapot/sora_teapot.gif" autoplay muted loop></img>
-      <div class="caption">Sora (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../teapot/svd_teapot.gif" autoplay muted loop></img>
-      <div class="caption">Stable Video Diffusion (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../teapot/pika_teapot.gif" autoplay muted loop></img>
-      <div class="caption">Pika 1.0 (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../teapot/runway_teapot.gif" autoplay muted loop></img>
-      <div class="caption">Runway Gen 3 (i2v)</div>
-    </div>
-    <div class="frame">
-      <img src="../teapot/lum_m_teapot.gif" autoplay muted loop></img>
-      <div class="caption">Lumiere (multiframe)</div>
-    </div>
-    <div class="frame">
-      <img src="../teapot/lum_i2v_teapot.gif" autoplay muted loop></img>
-      <div class="caption">Lumiere (i2v)</div>
-    </div>
-  </div>
-</div>
-
-
-
-
-    <footer>
-      &copy; 2025 Physics-IQ Benchmark Project
-    </footer>
-  </div> <!-- End content-wrapper -->
 
   <script>
-    const slidesContainer = document.getElementById('slidesContainer');
     let currentSlide = 0;
 
     function showSlide(index) {
       const slides = document.querySelectorAll('.slide');
+      const slideContainer = document.querySelector('.slide-container');
       const totalSlides = slides.length;
-      if (index < 0) index = totalSlides - 1;
-      else if (index >= totalSlides) index = 0;
-      currentSlide = index;
-      slidesContainer.style.transform = `translateX(-${currentSlide * 100}%)`;
 
+      // Ensure index stays within bounds
+      if (index < 0) currentSlide = totalSlides - 1;
+      else if (index >= totalSlides) currentSlide = 0;
+      else currentSlide = index;
+
+      // Shift the container to the current slide
+      const offset = -currentSlide * 100; // 100% per slide
+      slideContainer.style.transform = `translateX(${offset}%)`;
+    }
+
+    function prevSlide() {
+      showSlide(currentSlide - 1);
     }
 
     function nextSlide() {
       showSlide(currentSlide + 1);
     }
 
-    function prevSlide() {
-      showSlide(currentSlide - 1);
-    }
+    // Initialize the first slide
+    document.addEventListener('DOMContentLoaded', () => showSlide(currentSlide));
   </script>
 </body>
 </html>
