--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ body {
 
       // Shift the container to the current slide
       const offset = -currentSlide * 100; // 100% per slide
-      slideContainer.style.transform = `translateX(${offset}%)`;
+      slideContainer.style.transform = translateX(${offset}%);
     }
 
     function prevSlide() {
