--- a/index.html
+++ b/index.html
@@ -493,13 +493,84 @@ body {
 
       <!-- Slide for 'paint' folder -->
       <div class="slide">
-        <!-- Repeat similar structure for 'paint' -->
+        <div class="frame">
+          <img src="../paint/real_paint.gif" alt="Real Test Frames"></img>
+          <div class="caption">Real Test Frames</div>
+        </div>
+        <div class="frame">
+          <img src="../paint/vp_m_paint.gif" alt="VideoPoet (multiframe)"></img>
+          <div class="caption">VideoPoet (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../paint/vp_i2v_paint.gif" alt="VideoPoet (i2v)"></img>
+          <div class="caption">VideoPoet (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../paint/sora_paint.gif" alt="Sora (i2v)"></img>
+          <div class="caption">Sora (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../paint/svd_paint.gif" alt="Stable Video Diffusion (i2v)"></img>
+          <div class="caption">Stable Video Diffusion (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../paint/pika_paint.gif" alt="Pika 1.0 (i2v)"></img>
+          <div class="caption">Pika 1.0 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../paint/runway_paint.gif" alt="Runway Gen 3 (i2v)"></img>
+          <div class="caption">Runway Gen 3 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../paint/lum_m_paint.gif" alt="Lumiere (multiframe)"></img>
+          <div class="caption">Lumiere (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../paint/lum_i2v_paint.gif" alt="Lumiere (i2v)"></img>
+          <div class="caption">Lumiere (i2v)</div>
+        </div>
       </div>
 
       <!-- Slide for 'teapot' folder -->
       <div class="slide">
-        <!-- Repeat similar structure for 'teapot' -->
+        <div class="frame">
+          <img src="../teapot/real_teapot.gif" alt="Real Test Frames"></img>
+          <div class="caption">Real Test Frames</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/vp_m_teapot.gif" alt="VideoPoet (multiframe)"></img>
+          <div class="caption">VideoPoet (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/vp_i2v_teapot.gif" alt="VideoPoet (i2v)"></img>
+          <div class="caption">VideoPoet (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/sora_teapot.gif" alt="Sora (i2v)"></img>
+          <div class="caption">Sora (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/svd_teapot.gif" alt="Stable Video Diffusion (i2v)"></img>
+          <div class="caption">Stable Video Diffusion (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/pika_teapot.gif" alt="Pika 1.0 (i2v)"></img>
+          <div class="caption">Pika 1.0 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/runway_teapot.gif" alt="Runway Gen 3 (i2v)"></img>
+          <div class="caption">Runway Gen 3 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/lum_m_teapot.gif" alt="Lumiere (multiframe)"></img>
+          <div class="caption">Lumiere (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../teapot/lum_i2v_teapot.gif" alt="Lumiere (i2v)"></img>
+          <div class="caption">Lumiere (i2v)</div>
+        </div>
       </div>
+      
     </div>
     <div class="arrow arrow-right" onclick="nextSlide()">&rsaquo;</div>
   </div>
