--- a/index.html
+++ b/index.html
@@ -235,6 +235,10 @@ body {
     grid-column: 1 / -1; /* Span all columns for the real video */
     justify-self: center; /* Center the real video horizontally */
   }
+  
+    .real-video img {
+    transform: scale(0.6); /* Scale down to 60% of its original size */
+  }
 
 /* Individual video frame */
 .frame {
