--- a/index.html
+++ b/index.html
@@ -369,85 +369,7 @@ body {
       </p>
     </div>
 
-    <!-- Leaderboard -->
-    <div class="leaderboard">
-      <h2>Leaderboard 🥇</h2>
-      <table class="leaderboard-table">
-        <thead>
-          <tr>
-            <th>Model</th>
-            <th>Physics IQ Score</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>VideoPoet (multiframe) <span style="color:gold;">&#x1F3C6;</span></td>
-            <td>
-              <!-- Add data-score attribute for hover tooltip -->
-              <div class="progress">
-                <div class="progress-bar" style="width:20.7%;" data-score="20.7%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Runway Gen 3 (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:16.2%;" data-score="16.2%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>VideoPoet (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:15.7%;" data-score="15.7%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Stable Video Diffusion (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:15%;" data-score="15.0%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Lumiere (multiframe)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:11.9%;" data-score="11.9%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Pika 1.0 (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:10.9%;" data-score="10.9%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Sora (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:9.2%;" data-score="9.2%"></div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>Lumiere (i2v)</td>
-            <td>
-              <div class="progress">
-                <div class="progress-bar" style="width:8.8%;" data-score="8.8%"></div>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    
 
   <!-- Samples Section -->
   <div class="section-wrapper">
@@ -577,9 +499,130 @@ body {
           <div class="caption">Lumiere (i2v)</div>
         </div>
       </div>
+
+      <!-- Slide for 'match' folder -->
+      <div class="slide">
+    <div class="real-video">
+          <img src="../match/real_match.gif" alt="Real Test Frames"></img>
+          <div class="caption">Real Test Frames</div>
+        </div>
+        <div class="frame">
+          <img src="../match/vp_m_match.gif" alt="VideoPoet (multiframe)"></img>
+          <div class="caption">VideoPoet (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/vp_i2v_match.gif" alt="VideoPoet (i2v)"></img>
+          <div class="caption">VideoPoet (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/sora_match.gif" alt="Sora (i2v)"></img>
+          <div class="caption">Sora (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/svd_match.gif" alt="Stable Video Diffusion (i2v)"></img>
+          <div class="caption">Stable Video Diffusion (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/pika_match.gif" alt="Pika 1.0 (i2v)"></img>
+          <div class="caption">Pika 1.0 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/runway_match.gif" alt="Runway Gen 3 (i2v)"></img>
+          <div class="caption">Runway Gen 3 (i2v)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/lum_m_match.gif" alt="Lumiere (multiframe)"></img>
+          <div class="caption">Lumiere (multiframe)</div>
+        </div>
+        <div class="frame">
+          <img src="../match/lum_i2v_match.gif" alt="Lumiere (i2v)"></img>
+          <div class="caption">Lumiere (i2v)</div>
+        </div>
+      </div>
       
     </div>
   </div>
+
+
+    <!-- Leaderboard -->
+    <div class="leaderboard">
+      <h2>Leaderboard 🥇</h2>
+      <table class="leaderboard-table">
+        <thead>
+          <tr>
+            <th>Model</th>
+            <th>Physics IQ Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>VideoPoet (multiframe) <span style="color:gold;">&#x1F3C6;</span></td>
+            <td>
+              <!-- Add data-score attribute for hover tooltip -->
+              <div class="progress">
+                <div class="progress-bar" style="width:20.7%;" data-score="20.7%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Runway Gen 3 (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:16.2%;" data-score="16.2%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>VideoPoet (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:15.7%;" data-score="15.7%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Stable Video Diffusion (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:15%;" data-score="15.0%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Lumiere (multiframe)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:11.9%;" data-score="11.9%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Pika 1.0 (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:10.9%;" data-score="10.9%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Sora (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:9.2%;" data-score="9.2%"></div>
+              </div>
+            </td>
+          </tr>
+          <tr>
+            <td>Lumiere (i2v)</td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" style="width:8.8%;" data-score="8.8%"></div>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
   <script>
     let currentSlide = 0;
