--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@ body {
 
 <!-- Citation Section -->
 <div class="citation-section">
-  <h2>Citation</h2>
+  <h2>BibTeX 🤗</h2>
   <p>If you use our dataset and metrics, please cite our work:</p>
   <div style="background: #f9f9f9; border: 1px solid #ccc; border-radius: 5px; padding: 1rem; position: relative;">
     <pre style="margin: 0; font-family: monospace; font-size: 0.9rem; white-space: pre-wrap; word-wrap: break-word;">
@@ -647,7 +647,7 @@ body {
 <!-- Footer Logo -->
 <footer>
   <p>Thank you for visiting our benchmark!</p>
-  <img src="assets/logo.png" alt="Physics-IQ Logo" style="max-width: 60px; height: auto; margin-top: 1rem;">
+  <img src="../assets/gdm_logo.png" alt="Physics-IQ Logo" style="max-width: 40px; height: auto; margin-top: 1rem;">
 </footer>
 
 <script>
