--- a/index.html
+++ b/index.html
@@ -348,6 +348,12 @@ body {
         Use our benchmark and dataset to assess your video model's physics understanding! 
       </p>
     </div>
+
+
+    <div class="frame">
+          <img src="../assets/category_samples.pdf""></img>
+          <div class="caption">Physics IQ tests physics understadning across 5 categories</div>
+        </div>
     
     <!-- Abstract -->
     <div class="section-wrapper">
