--- a/index.html
+++ b/index.html
@@ -373,9 +373,11 @@ body {
 
 
     <div class="pdf-container">
-  <img src="../assets/category_samples.pdf" alt="Preview of PDF">
+  <object data="../assets/category_samples.pdf"" type="application/pdf">
+    <p>Your browser does not support PDFs. <a href="assets/sample.pdf">Download the PDF</a>.</p>
+  </object>
   <div class="pdf-caption">Physics IQ tests physics understadning across 5 categories</div>
-  </div>
+</div>
     <!-- Abstract -->
     <div class="section-wrapper">
       <h2>Abstract 📣</h2>
