--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@ body {
 
 
     <div class="pdf-container">
-  <object data="../assets/category_samples.pdf"" type="application/pdf">
+  <img data="../assets/category_samples.jpg"" type="application/pdf">
     <p>Your browser does not support PDFs. <a href="assets/sample.pdf">Download the PDF</a>.</p>
-  </object>
+  </img>
   <div class="pdf-caption">Physics IQ tests physics understadning across 5 categories</div>
 </div>
     <!-- Abstract -->
