--- a/index.html
+++ b/index.html
@@ -373,11 +373,10 @@ body {
 
 
     <div class="pdf-container">
-  <img data="../assets/category_samples.jpg"" type="application/pdf">
-    <p>Your browser does not support PDFs. <a href="assets/sample.pdf">Download the PDF</a>.</p>
-  </img>
+  <img src="../assets/category_samples.jpg" alt="Preview of PDF">
   <div class="pdf-caption">Physics IQ tests physics understadning across 5 categories</div>
 </div>
+    
     <!-- Abstract -->
     <div class="section-wrapper">
       <h2>Abstract 📣</h2>
